<resources>
    <string name="app_name">FirebaseLoginSample</string>

    <!-- Common -->
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="name">NAME</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="reset_password">RESET PASSWORD</string>

    <!-- Login -->
    <string name="login_title">Firebase Login Sample</string>

    <!-- Sign Up -->
    <string name="sign_up_title">SIGN UP</string>

    <!-- Reset Password -->
    <string name="reset_password_title">RESET PASSWORD</string>
    <string name="send_password_reset_email">SEND PASSWORD RESET EMAIL</string>

    <!-- Home -->

</resources>
